Fix z-index property

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -4,7 +4,7 @@
 .header {
   position: fixed;
   padding: 0;
-  z-index: 10000;
+  z-index: 1;
   background-color: var(--accent);
   width: 100%;
   opacity: 0;
